--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>URL Sortner</title>
-  <link rel="stylesheet" href="/URL-shortner/styles.css">
+ 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<style>
+   .content {
+   max-width: 500px;
+   margin: auto;
+   background: black;
+   padding: 70px;
+   }
+   .input {
+   background-color:#FFF;
+   min-height:30px;
+   min-width: 500px;
+   font-size:14pt;
 
+   }
+
+   .button{
+   margin-top: 10px;
+   float: right;
+   background-color: green;
+   color: white;
+   height: 30px;
+   cursor: pointer;
+   }
+</style>
 </head>
 
 <body>
