--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <style>
+  html{
+    font-size:62.5%;
+  }
    .content {
    max-width: 500px;
    margin: auto;
@@ -32,6 +35,12 @@
    height: 30px;
    cursor: pointer;
    }
+
+   @media(max-width:998px){
+     html{
+       font-size: 55%;
+     }
+   }
 </style>
 </head>
 
@@ -40,9 +49,7 @@
     <input class='input' type="text" placeholder="Please enter a url" id='urlInput' />
     <button class='button' id='btn'>Create Short URL</button>
   </div>
-  <div class="content ">
-    <a target="_blank" href='' class='view'></a>
-  </div>
+  
 
   <script type="text/javascript">
     $('#btn').click(function () {
