changed the button

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <style>
+    
+
     .content {
       max-width: 500px;
       margin: auto;
       background: white;
       padding: 70px;
+      
     }
 
     .input {
@@ -30,14 +33,18 @@
       text-shadow: 0px 0px 0px rgba(66, 66, 66, .75);
 
     }
-     .css-input:focus {
-     outline:none;
-     }
+
+    .css-input:focus {
+      outline: none;
+    }
 
     a.view {
       text-decoration: none;
+      color: FEE440;
+
     }
-    a:hover{
+
+    a:hover {
       color: FEE440;
     }
 
