changed the button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <style>
-    
+    body{
+      background-color: #71EFA3 ;
+    }
 
     .content {
       max-width: 500px;
@@ -40,7 +42,7 @@
 
     a.view {
       text-decoration: none;
-      color: FEE440;
+      color: #FEE440;
 
     }
 
