changed the button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <style>
-    body{
-      background-color: #71EFA3 ;
+    body {
+      background-color: #D8E3E7;
     }
 
     .content {
@@ -19,7 +19,8 @@
       margin: auto;
       background: white;
       padding: 70px;
-      
+      background-color: #D8E3E7;
+
     }
 
     .input {
@@ -31,6 +32,7 @@
       font-size: 14pt;
       color: #000000;
       border-style: solid;
+      border-radius: 11px;
       box-shadow: 0px 0px 5px rgba(66, 66, 66, .75);
       text-shadow: 0px 0px 0px rgba(66, 66, 66, .75);
 
@@ -42,7 +44,7 @@
 
     a.view {
       text-decoration: none;
-      color: #FEE440;
+      color: #132C33;
       font-size: large;
 
     }
@@ -72,9 +74,9 @@
       background-image: -ms-linear-gradient(top, #3498db, #2980b9);
       background-image: -o-linear-gradient(top, #3498db, #2980b9);
       background-image: linear-gradient(to bottom, #3498db, #2980b9);
-      -webkit-border-radius: 28;
-      -moz-border-radius: 28;
-      border-radius: 28px;
+      -webkit-border-radius: 11;
+      -moz-border-radius: 11;
+      border-radius: 11px;
       font-family: Arial;
       color: #ffffff;
       /* font-size: 20px; */
