--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
     <div class="content " id="link">
       <a target="_blank" href='' class='view'></a>
+      <button onclick="myFunction()">Copy text</button>
     </div>
 
   </div>
@@ -130,6 +131,20 @@
         }
       });
     });
+    function myFunction() {
+    /* Get the text field */
+    var copyText = document.getElementById("myInput");
+
+    /* Select the text field */
+    copyText.select();
+    copyText.setSelectionRange(0, 99999); /* For mobile devices */
+
+    /* Copy the text inside the text field */
+    navigator.clipboard.writeText(copyText.value);
+
+    /* Alert the copied text */
+    // alert("Copied the text: " + copyText.value);
+    }
   </script>
 </body>
 
