changed the button

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>URL Sortner</title>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,700;1,400;1,700&display=swap"
+  rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <style>
     body {
-      background-color: #D8E3E7;
+      background-color: #79B4B7;
     }
 
     .content {
@@ -19,7 +22,7 @@
       margin: auto;
       background: white;
       padding: 70px;
-      background-color: #D8E3E7;
+      background-color: #79B4B7;
 
     }
 
@@ -50,7 +53,7 @@
     }
 
     a:hover {
-      color: FEE440;
+      color: #FEE440;
     }
 
     /* .button{
@@ -93,10 +96,14 @@
       background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
       text-decoration: none;
     }
+    h1{
+     font-family: 'Noto Sans', sans-serif;
+    }
   </style>
 </head>
 
 <body>
+  <h1>Short links, big results</h1>
   <div class="main-container">
 
     <div class="content">
