--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
           </div>
         </div>
       
-      <p class="boxtextcenter">ShortURL.at is a free tool to shorten a URL or reduce a link<br>Use our URL Shortener to
+      <p class="boxtextcenter"> A free tool to shorten a URL or reduce a link<br>Use our URL Shortener to
         create
         a shortened link making it easy to remember</p>
     </section>
@@ -828,7 +828,7 @@
     </div> -->
     <section id="content">
       <h2>Simple and fast URL shortener!</h2>
-      <p>ShortURL allows to reduce long links from <a href="https://www.instagram.com/" target="_blank">Instagram</a>,
+      <p> Allows to reduce long links from <a href="https://www.instagram.com/" target="_blank">Instagram</a>,
         <a href="https://www.facebook.com/" target="_blank">Facebook</a>, <a href="https://www.youtube.com/"
           target="_blank">YouTube</a>, <a href="https://www.twitter.com/" target="_blank">Twitter</a>, <a
           href="https://www.linkedin.com/" target="_blank">Linked In</a> and top sites on the Internet, just paste the
