--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
 
   </div> -->
   <header>
-    <div id="logo"><a href="https://www.shorturl.at/" class="logo">Short URL</a></div>
+    <div id="logo"><a href="https://www.natuskar.me/" class="logo">Short links, Big results</a></div>
   </header>
   <main>
     <section id="urlbox">
