--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <meta name="description"
     content="ShortURL is a url shortener to reduce a long link. Use our tool to shorten links and then
      share them, in addition you can monitor traffic statistics.">
-
+<!-- checking push -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
